# stock-monitor

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
stock_monitor/: __about__.py  __init__.py  data.py  models.py
stock_monitor/renders/: arbitrages.py  stock.py
tests/: importable_test.py
