[tool.poetry]
name = "stock-monitor"
version = "0.1.0"
description = ""
authors = ["Danil Petrov <ddbihbka@gmail.com>"]
license = "Apache2.0"
readme = "README.md"
packages = [{include = "stock_monitor"}]


[tool.poetry.dependencies]
python = "^3.10"
altair = "^4.2.0"
pandas = "^1.5.3"
yfinance = "^0.2.4"
streamlit = "^1.18.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
